# nosocomial_covid_model

./: README.md  pyproject.toml
hospital_model/: __init__.py  att_fracts_funcs.py  general_funcs.py  hospital_model_cont.py  main_script.py  model_funcs.py  plotting_funcs.py  simulation.py  tf_att_fracts.py  tf_lik.py  tf_lik_funcs.py  tf_mcmc.py
