[tool.poetry]
name = "hospital-model"
version = "0.1.0"
description = ""
authors = ["Jessica Bridgen <j.bridgen@lancaster.ac.uk>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hospital_model"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tensorflow = "^2.11.0"
tensorflow-probability = "0.17"
xarray = "^2022.10.0"
pandas = "^1.5.1"
scipy = "^1.9.3"
matplotlib = "^3.6.1"
seaborn = "^0.12.2"
netcdf4 = "^1.6.2"


[tool.poetry.dev-dependencies]
tensorboard-plugin-profile = "^2.8.0"
ipython = "^8.5.0"
jedi = "^0.18.1"
isort = "^5.10.1"
flake8 = "^5.0.4"
black = "^22.10.0"
rope = "^1.3.0"
autopep8 = "^1.7.0"
yapf = "^0.32.0"


[tool.black]
line-length=79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
